@@ -6,6 +6,7 @@ Changes between 2.1.1 and [NEXT VERSION]
 - fix issue69 / assertion rewriting fixed on some boolean operations
 - fix issue68 / packages now work with assertion rewriting
 - fix issue66: use different assertion rewriting caches when the -O option is passed
+- don't try assertion rewriting on Jython, use reinterp
 
 Changes between 2.1.0 and 2.1.1
 ----------------------------------------------
